Enforce minimal responses in named

--- a/named.conf
+++ b/named.conf
@@ -40,6 +40,9 @@ options {
 	dnssec-enable yes;
 	dnssec-validation yes;
 
+	/* without this there were sporadic resolving failures on okd CoreOS nodes */
+	minimal-responses yes;
+
 	/* Path to ISC DLV key */
 	bindkeys-file "/etc/named.root.key";
 
